--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,18 +1,16 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Personal progress report
+description: This documentation compiles all things learnent in my IT CFC training.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
+  tagline: Explore documentation categories
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: My projects
+      link: /progress-report/projects
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
+    - text: Read report
+      link: /progress-report/introduction
+      icon: right-arrow
       variant: minimal
 ---
 
@@ -21,16 +19,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Next steps
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Projects realized" icon="rocket">
+		Find description and links to [all projects I made](/progress-report/projects) along my training.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Technologies learned" icon="download">
+		Browse a list of [all technologies I learned](/progress-report/technologies).
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Tools used" icon="setting">
+		See [all tools I can use](/progress-report/tools).
 	</Card>
 </CardGrid>
